@@ -2,15 +2,18 @@
 \alias{as.weight}
 \title{Calibration Weights}
 \description{
-This function facilitates the creation of weights for a set of theta values for
-use in the function \code{\link[=plink-methods]{plink} }
+This function facilitates the creation of either a set of quadrature weights or
+weights based on a set of theta values for use in the function 
+\code{\link[=plink-methods]{plink} }
 }
 \usage{
-as.weight(theta1 = NULL, weight1 = NULL, theta2 = NULL, weight2 = NULL, 
-  normal.wt = FALSE)
+as.weight(n=40, theta1 = NULL, weight1 = NULL, theta2 = NULL, weight2 = NULL, 
+  normal.wt = FALSE, ...)
 }
 
 \arguments{
+  \item{n}{number of quadrature points to use}
+
   \item{theta1}{vector of theta values for the set of \code{TO} item parameters
     (i.e. the item parameters that will not be transformed)}
 
@@ -26,21 +29,29 @@ as.weight(theta1 = NULL, weight1 = NULL, theta2 = NULL, weight2 = NULL,
   \item{normal.wt}{if \code{TRUE} and \code{weight1} is \code{NULL}, the weights for 
     \code{theta1} and \code{theta2} will be computed to correspond to the
     densities from a normal distribution.}
+
+  \item{...}{further arguments passed to other methods }
 }
 
 \details{
-If no theta values are supplied, the values for \code{theta1} and \code{theta2} will
-be equal interval values ranging from -4 to 4 with an increment of 0.05.  If values are
-only supplied for \code{theta1}, the values for \code{theta2} will equal those of
-\code{theta1}.  If values are supplied for \code{theta1} and \code{theta2}, the length
-of the two vectors must be equal.  
+If no theta values are supplied, \code{n} normal quadrature points and weights will be 
+computed using the \code{\link[statmod:gauss.quad.prob]{gauss.quad.prob}} function from 
+the \code{statmod} package. Additional arguments can be passed to this function to change
+the distribution used to compute the quadrature weights. 
 
-If no weights are supplied, the values for \code{weight1} and \code{weight2} will
-be equal to 1/n for n theta values.  If values are only supplied for \code{weight1}, the 
-values for \code{weight2} will equal those of \code{weight1}.  If values are supplied 
-for \code{weight1} and/or \code{weight2}, the length of the vector(s) should be equal 
-to the length of the theta vector(s). If values are supplied for \code{weight1} or 
-\code{weight2}, \code{normal.wt} will be ignored.
+If values are only supplied for \code{theta1}, the values for \code{theta2} will equal those of
+\code{theta1}.  If values are supplied for \code{theta1} and \code{theta2}, the length
+of the two vectors must be equal.
+
+If no weights are supplied, and \code{normal.wt}=FALSE, the values for \code{weight1} 
+and \code{weight2} will be equal to 1/m for m theta values. If no weights are supplied, 
+and \code{normal.wt}=TRUE, the values for \code{weight1} and \code{weight2} will be equal 
+to the normal densities corresponding to the theta values.  
+
+If values are only supplied for \code{weight1}, the values for \code{weight2} will equal 
+those of \code{weight1}.  If values are supplied for \code{weight1} and/or \code{weight2}, 
+the length of the vector(s) should be equal to the length of the theta vector(s). If values 
+are supplied for \code{weight1} or \code{weight2}, \code{normal.wt} will be ignored.
 
 See Kolen & Brennan (2004) for more information on calibration weights.
 }
@@ -62,20 +73,24 @@ n x 2 matrix of weights corresponding to \code{weight1} and \code{weight2}.
 \note{When \code{normal.wt} equals \code{TRUE}, \code{theta1} and \code{theta2} are
 standardized to determine normal density weights}
 
-\seealso{\code{\link[=plink-methods]{plink}} }
+\seealso{\code{\link[=plink-methods]{plink}}, \code{\link[statmod:gauss.quad.prob]{gauss.quad.prob}} }
 
 \examples{
-# Create a set of default theta values and weights
+# Create a set of 40 (default) theta values and weights using quadrature
 wt <- as.weight()
 
+# Create a set of 20 theta values and weights using quadrature
+wt <- as.weight(20)
+
+# Create a set of 40 quadrature points and weights using a uniform distribution
+wt <- as.weight(dist="uniform")
+
 # Create weights for a set of random normal theta values
-wt <- as.weight(rnorm(100))
+wt <- as.weight(theta1=rnorm(100))
 
 # Create an object with equal interval theta values and normal density weights
-wt <- as.weight(normal.wt=TRUE)
+wt <- as.weight(theta1=seq(-4,4,0.05), normal.wt=TRUE)
 
-# Create an object with random normal theta values and normal density weights
-wt <- as.weight(rnorm(100),normal.wt=TRUE)
 }
 
 \keyword{ misc }
