@@ -1,3 +1,11 @@
+Changes in version: plink_0.0-6
+
+  o Update to how weights can be computed in the as.weight function
+
+  o Some corrections/additions to the .Rd files.
+
+==============================
+
 Changes in version: plink_0.0-5
 
   o Corrections made to the output of group names in the plink function
